# porfolio

./: Cargo.toml  README.md  index.html  package.json
src/: main.rs
src/components/: aboutme.rs  contact.rs  footer.rs  landing.rs  nav.rs  projects.rs  skills.rs
src/components/svg/: emojis.rs  flags.rs
src/data/: data.json  mod.rs
src/sass/partials/: _fonts.scss
