[package]
name = "portfolio"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
web-sys = { version = "0.3.64", features = ["Navigator", "MediaQueryList"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
